swen430as2/test_files/valid/casts/Cast_Valid_01.while
void main() {
    int x = (int) 1;
}
