swen430as2/test_files/invalid/casts/Cast_Invalid_1-TC01.while
void main() {
    int x = (int) false;
}
